--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,5 @@
 {{#if user}}
   <div class="jumbotron">
-    <h1>Orchestrate User Authentication</h1>
     <p>Below is your profile information!</p>
   </div>
   <div class="panel panel-default">
@@ -16,7 +15,7 @@
   <div class="jumbotron">
     <p>Sign in and view your profile!</p>
     <p>
-      <a href="/signin" class="btn btn-primary btn-lg" role="button">
+      <a href="/auth/facebook" class="btn btn-primary btn-lg" role="button">
         <span class="glyphicon glyphicon-user"></span> 
         Sign in!
       </a>
